# CZI-Issue-29

./: CITATION.CFF  README.md  check_meta_data_from_cfg.py  check_meta_data_from_napari_config_yml.py  check_meta_data_from_napari_descriptionmd.py  checklist.py  create_checklist.py  main.py  process.MD  pyproject.toml  setup.cfg  setup.py
.napari-hub/: DESCRIPTION.md  config.yml
collect_data_checks/: check_citation.py  check_meta_data_from_cfg.py  check_meta_data_from_napari_config_yml.py  check_meta_data_from_napari_descriptionmd.py  check_meta_data_from_npe2config.py
