[metadata]
name = vessel-express-napari
version = 0.0.8
author = Lennart Kowitz
author_email = lennart.kowitz@isas.de
url = https://github.com/MMV-Lab/vessel-express-napari
license = BSD-3-Clause
description = A simple plugin for 3D vessel segmentation
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = 
	Bug Tracker = https://github.com/MMV-Lab/vessel-express-napari/issues
	Documentation = https://github.com/MMV-Lab/vessel-express-napari#README.md
	Source Code = https://github.com/MMV-Lab/vessel-express-napari
	User Support = https://github.com/MMV-Lab/vessel-express-napari/issues

	
[options.entry_points]
napari.manifest = 
	napari-J = napari_j:napari.yaml
